src/native/libs/Evergreen.Physics/egJolt.h

typedef struct {
	void* internal;
} EgJoltInstance;
typedef struct {
	float x;
	float y;
	float z;
} EgJoltVector3;
typedef struct {
	float x;
	float y;
	float z;
	float w;
} EgJoltQuaternion;
typedef struct {
	void* internal;
} EgJoltCharacterVirtual;
typedef struct {
	void* internal;
} EgJoltCharacter;
typedef struct {
	unsigned int bodyId1;
	unsigned long long userData1;
	EgJoltVector3 point1;
	unsigned int bodyId2;
	unsigned long long userData2;
	EgJoltVector3 point2;
} EgJoltContactArgs;
typedef struct {
	unsigned int vertexCount;
	EgJoltVector3* vertices;

	unsigned int indexCount;
	unsigned int* indices;

	unsigned long long userData;
} EgJoltMesh;
typedef struct {
	unsigned int meshCount;
	EgJoltMesh* meshes;
} EgJoltCompoundMesh;
typedef struct {
	EgJoltVector3 position;
	EgJoltQuaternion rotation;
	EgJoltVector3 linearVelocity;
	EgJoltVector3 angularVelocity;
	float gravityFactor;
	EgJolt_BodyFlags flags;
} EgJoltBodyState;
	EG_EXPORT void egJoltSharedInit();
	EG_EXPORT void egJoltSharedDestroy();
	EG_EXPORT unsigned int egJoltGetMaxBodies();
	EG_EXPORT unsigned int egJoltGetMaxBodyPairs();
	EG_EXPORT unsigned int egJoltGetMaxContactConstraints();
	EG_EXPORT EgJoltInstance egJoltCreateInstance(void(*callbackContactAdded)(EgJoltContactArgs), void(*callbackContactPersisted)(EgJoltContactArgs));
	EG_EXPORT void egJoltDestroyInstance(EgJoltInstance instance);
	EG_EXPORT void egJoltUpdate(EgJoltInstance instance, float deltaTime, int collisionSteps);
	EG_EXPORT void egJoltSetGravity(EgJoltInstance instance, EgJoltVector3 gravity);
	EG_EXPORT void egJoltOptimizeBroadPhase(EgJoltInstance instance);
	EG_EXPORT unsigned int egJoltGetCharacterBodyId(EgJoltInstance instance, EgJoltCharacter character);
	EG_EXPORT bool egJoltAreBodiesColliding(EgJoltInstance instance, unsigned int bodyId1, unsigned int bodyId2);
	EG_EXPORT void egJolt_Body_InvalidateContactCache(EgJoltInstance instance, unsigned int bodyId);
	EG_EXPORT void egJoltBodySetGravityFactor(EgJoltInstance instance, unsigned int bodyId, float gravityFactor);
	EG_EXPORT unsigned int egJoltAddBodyDynamicBox(EgJoltInstance instance, EgJoltVector3 scale, float density, float mass, unsigned long long userData, unsigned int* bodyId, EgJoltBodyState* state);
	EG_EXPORT unsigned int egJoltAddBodyDynamicSphere(EgJoltInstance instance, float radius, float density, float mass, unsigned long long userData, unsigned int* bodyId, EgJoltBodyState* state);
	EG_EXPORT unsigned int egJoltAddBodyStaticBox(EgJoltInstance instance, EgJoltVector3 scale, unsigned long long userData, unsigned int* bodyId, EgJoltBodyState* state);
	EG_EXPORT unsigned int egJoltAddBodyStaticMesh(EgJoltInstance instance, EgJoltVector3* vertices, int vertexCount, unsigned int* indices, int indexCount, unsigned long long userData, unsigned int* bodyId, EgJoltBodyState* state);
	EG_EXPORT unsigned int egJoltAddBodyStaticCompoundMesh(EgJoltInstance instance, EgJoltCompoundMesh compoundMesh, unsigned long long userData, unsigned int* bodyId, EgJoltBodyState* state);
	EG_EXPORT void egJoltActivateBody(EgJoltInstance instance, unsigned int bodyId);
	EG_EXPORT void egJoltDeactivateBody(EgJoltInstance instance, unsigned int bodyId);
	EG_EXPORT void egJoltRemoveBody(EgJoltInstance instance, unsigned int bodyId);
	EG_EXPORT bool egJoltIsBodyActive(EgJoltInstance instance, unsigned int bodyId);
	EG_EXPORT void egJoltAddBodyImpulse(EgJoltInstance instance, unsigned int bodyId, EgJoltVector3 impulse);
	EG_EXPORT void egJoltAddBodyAngularImpulse(EgJoltInstance instance, unsigned int bodyId, EgJoltVector3 angularImpulse);
	EG_EXPORT unsigned long long egJoltGetBodyUserData(EgJoltInstance instance, unsigned int bodyId);
	EG_EXPORT void egJoltSetBodyUserData(EgJoltInstance instance, unsigned int bodyId, unsigned long long userData);
	EG_EXPORT void egJoltSetBodyPosition(EgJoltInstance instance, unsigned int bodyId, EgJoltVector3 position);
	EG_EXPORT void egJoltSetBodyPositionAndRotationAndVelocity(EgJoltInstance instance, unsigned int bodyId, EgJoltVector3 position, EgJoltQuaternion rotation, EgJoltVector3 linearVelocity, EgJoltVector3 angularVelocity);
	EG_EXPORT void egJoltSetBodyPositionAndVelocity(EgJoltInstance instance, unsigned int bodyId, EgJoltVector3 position, EgJoltVector3 linearVelocity, EgJoltVector3 angularVelocity);
	EG_EXPORT void egJoltSetBodyVelocity(EgJoltInstance instance, unsigned int bodyId, EgJoltVector3 linearVelocity, EgJoltVector3 angularVelocity);
	EG_EXPORT void egJoltSetBodyVelocityAndActivate(EgJoltInstance instance, unsigned int bodyId, EgJoltVector3 linearVelocity, EgJoltVector3 angularVelocity);
	EG_EXPORT EgJoltVector3 egJoltGetBodyPosition(EgJoltInstance instance, unsigned int bodyId);
	EG_EXPORT void egJoltSetBodyPositionAndRotation(EgJoltInstance instance, unsigned int bodyId, EgJoltVector3 position, EgJoltQuaternion rotation);
	EG_EXPORT void egJoltGetBodyPositionAndRotation(EgJoltInstance instance, unsigned int bodyId, EgJoltVector3& position, EgJoltQuaternion& rotation);
	EG_EXPORT void egJoltGetCharacterVirtualActiveDynamicContacts(EgJoltInstance instance, EgJoltCharacterVirtual character, void(*callbackContact)(unsigned int));