src/managed/Physics/Backend/Jolt/Interop/api/Methods.cs

using System.Runtime.InteropServices;

namespace Evergreen.Physics.Backend.Jolt.Interop;

public static unsafe partial class Methods
{
    public static EgJolt_BodyFlags Or(EgJolt_BodyFlags a, EgJolt_BodyFlags b)
    {
        return (EgJolt_BodyFlags)(unchecked((byte)(a) | (byte)(b)));
    }

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltSharedInit();

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltSharedDestroy();

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint egJoltGetMaxBodies();

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint egJoltGetMaxBodyPairs();

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint egJoltGetMaxContactConstraints();

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern EgJoltInstance egJoltCreateInstance([NativeTypeName("void (*)(EgJoltContactArgs)")] delegate* unmanaged[Cdecl]<EgJoltContactArgs, void> callbackContactAdded, [NativeTypeName("void (*)(EgJoltContactArgs)")] delegate* unmanaged[Cdecl]<EgJoltContactArgs, void> callbackContactPersisted);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltDestroyInstance(EgJoltInstance instance);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltUpdate(EgJoltInstance instance, float deltaTime, int collisionSteps);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltSetGravity(EgJoltInstance instance, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 gravity);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltOptimizeBroadPhase(EgJoltInstance instance);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint egJoltGetCharacterBodyId(EgJoltInstance instance, EgJoltCharacter character);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("bool")]
    public static extern byte egJoltAreBodiesColliding(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId1, [NativeTypeName("unsigned int")] uint bodyId2);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJolt_Body_InvalidateContactCache(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltBodySetGravityFactor(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId, float gravityFactor);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint egJoltAddBodyDynamicBox(EgJoltInstance instance, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 scale, float density, float mass, [NativeTypeName("unsigned long long")] ulong userData, [NativeTypeName("unsigned int *")] uint* bodyId, EgJoltBodyState* state);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint egJoltAddBodyDynamicSphere(EgJoltInstance instance, float radius, float density, float mass, [NativeTypeName("unsigned long long")] ulong userData, [NativeTypeName("unsigned int *")] uint* bodyId, EgJoltBodyState* state);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint egJoltAddBodyStaticBox(EgJoltInstance instance, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 scale, [NativeTypeName("unsigned long long")] ulong userData, [NativeTypeName("unsigned int *")] uint* bodyId, EgJoltBodyState* state);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint egJoltAddBodyStaticMesh(EgJoltInstance instance, [NativeTypeName("EgJoltVector3 *")] System.Numerics.Vector3* vertices, int vertexCount, [NativeTypeName("unsigned int *")] uint* indices, int indexCount, [NativeTypeName("unsigned long long")] ulong userData, [NativeTypeName("unsigned int *")] uint* bodyId, EgJoltBodyState* state);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint egJoltAddBodyStaticCompoundMesh(EgJoltInstance instance, EgJoltCompoundMesh compoundMesh, [NativeTypeName("unsigned long long")] ulong userData, [NativeTypeName("unsigned int *")] uint* bodyId, EgJoltBodyState* state);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltActivateBody(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltDeactivateBody(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltRemoveBody(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("bool")]
    public static extern byte egJoltIsBodyActive(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltAddBodyImpulse(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 impulse);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltAddBodyAngularImpulse(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 angularImpulse);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("unsigned long long")]
    public static extern ulong egJoltGetBodyUserData(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltSetBodyUserData(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId, [NativeTypeName("unsigned long long")] ulong userData);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltSetBodyPosition(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 position);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltSetBodyPositionAndRotationAndVelocity(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 position, [NativeTypeName("EgJoltQuaternion")] System.Numerics.Quaternion rotation, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 linearVelocity, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 angularVelocity);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltSetBodyPositionAndVelocity(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 position, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 linearVelocity, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 angularVelocity);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltSetBodyVelocity(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 linearVelocity, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 angularVelocity);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltSetBodyVelocityAndActivate(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 linearVelocity, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 angularVelocity);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgJoltVector3")]
    public static extern System.Numerics.Vector3 egJoltGetBodyPosition(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltSetBodyPositionAndRotation(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 position, [NativeTypeName("EgJoltQuaternion")] System.Numerics.Quaternion rotation);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltGetBodyPositionAndRotation(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId, [NativeTypeName("EgJoltVector3 &")] System.Numerics.Vector3* position, [NativeTypeName("EgJoltQuaternion &")] System.Numerics.Quaternion* rotation);
